--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <div class="row">
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/logo.png" alt="">
+            <img src="images/Logo.png" alt="">
           </div>
         </div>
         <div class="col-md-6">
